# robomme_benchmark

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  RoboMME Results — 4 policies (by suite).xlsx  Untitled  app.py  check_tcp_offset.py  docker-entrypoint.sh  history_bench_readme.md  human_readme.md  packages.txt  pyproject.toml  readme.md  replay_action.py  requirements.txt  run_oraclev4.sh  run_oraclev4_README.md  setup.py  test.py  v0.2.3dataset_format.md  verify_ik.py  verify_rpy_scipy.py  zerogpu.md
challenge_inteface/: client.py  policy.py  readme.md
challenge_interface/: client_http.py  readme.md  server.py
dataset_json/: record_dataset_BinFill_metadata.json  record_dataset_ButtonUnmaskSwap_metadata.json  record_dataset_ButtonUnmask_metadata.json  record_dataset_InsertPeg_metadata.json  record_dataset_MoveCube_metadata.json  record_dataset_PatternLock_metadata.json  record_dataset_PickHighlight_metadata.json  record_dataset_PickXtimes_metadata.json  record_dataset_RouteStick_metadata.json  record_dataset_StopCube_metadata.json  record_dataset_SwingXtimes_metadata.json  record_dataset_VideoPlaceButton_metadata.json  record_dataset_VideoPlaceOrder_metadata.json  record_dataset_VideoRepick_metadata.json  record_dataset_VideoUnmaskSwap_metadata.json  record_dataset_VideoUnmask_metadata.json
dataset_replay/: record_dataset_BinFill_rpy_summary.json  record_dataset_ButtonUnmaskSwap_rpy_summary.json  record_dataset_ButtonUnmask_rpy_summary.json  record_dataset_InsertPeg_rpy_summary.json  record_dataset_MoveCube_rpy_summary.json  (+11 more)
(+1230 files in other folders)
